fix bottom of title text cut off issue On some machines the title text is cut off at the bottom (the stems of the g's). This was fixed by increasing the line height from 1.2 to 1.3. This appears to have fixed the issue, but this is more so treating the symptoms rather than the root cause.

--- a/src/styles/Home.css
+++ b/src/styles/Home.css
@@ -57,6 +57,7 @@
   -webkit-text-fill-color: transparent;
 
   margin-bottom: 3%;
+  line-height: 1.3;
 }
 
 .box{
